WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255510
Crash in WebCore::ReplaceSelectionCommand::makeInsertedContentRoundTrippableWithHTMLTreeBuilder
https://bugs.webkit.org/show_bug.cgi?id=255510
Summary
Crash in WebCore::ReplaceSelectionCommand::makeInsertedContentRoundTrippableW...
Chirag M Shah
Reported
2023-04-17 03:41:08 PDT
rdar://107979390
Attachments
Add attachment
proposed patch, testcase, etc.
Chirag M Shah
Comment 1
2023-04-17 03:47:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12789
EWS
Comment 2
2023-04-17 18:52:25 PDT
Committed
263051@main
(62a3751abfbc): <
https://commits.webkit.org/263051@main
> Reviewed commits have been landed. Closing PR #12789 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug