Cherry-pick 263051@main (62a3751abfbc). https://bugs.webkit.org/show_bug.cgi?id=255510

Fix SEGV in ReplaceSelectionCommand::makeInsertedContentRoundTrippableWithHTMLTreeBuilder
    https://bugs.webkit.org/show_bug.cgi?id=255510
    rdar://107979390

    Reviewed by Ryosuke Niwa.

    This change fixes a crash which is caused because we end up in state
    where m_lastNodeInserted is NULL after a call to
    ReplaceSelectionCommand::InsertedNodes::willRemoveNode, which means that
    when makeInsertedContentRoundTrippableWithHTMLTreeBuilder calls
    pastLastLeaf() we trip over an assertion.

    * LayoutTests/fast/editing/replace-selection-command-crash-expected.txt: Added.
    * LayoutTests/fast/editing/replace-selection-command-crash.html: Added.
    * Source/WebCore/editing/ReplaceSelectionCommand.cpp:
    (WebCore::ReplaceSelectionCommand::InsertedNodes::willRemoveNode):

    Canonical link: https://commits.webkit.org/263051@main